# ZeroCost

./: .env.example  .gitignore  CONTRIBUTING.md  FRONTEND_SETUP.md  QUICKSTART.md  README.md  SPEC.md  TESTING.md
.github/workflows/: ci.yml
backend/go-scraper/: Dockerfile  README.md  go.mod  go.sum  main.go
backend/go-scraper/internal/config/: config.go
backend/go-scraper/internal/ingestion/: client.go
backend/go-scraper/internal/models/: event.go
backend/go-scraper/internal/scrapers/: eventbrite.go  manager.go  meetup.go  reddit.go  university.go
backend/java-api/: Dockerfile  README.md  pom.xml
backend/java-api/src/main/java/com/zerocost/: ZeroCostApplication.java
backend/java-api/src/main/java/com/zerocost/config/: RedisConfig.java  SecurityConfig.java
backend/java-api/src/main/resources/: application.yml
backend/ranking-engine/: CMakeLists.txt  Dockerfile  README.md
backend/ranking-engine/include/: distance.h  event.h  http_server.h  ranking_service.h  scoring.h
backend/ranking-engine/src/: distance.cpp  http_server.cpp  main.cpp  ranking_service.cpp  scoring.cpp
frontend/: .env.local.example  Dockerfile  README.md  next.config.js  package-lock.json  package.json  tailwind.config.ts
frontend/src/app/: globals.css  layout.tsx  page.tsx
frontend/src/components/: EventList.tsx  FilterBar.tsx  Map.tsx
frontend/src/hooks/: useEvents.ts  useGeolocation.ts
frontend/src/lib/: api.ts
frontend/src/types/: index.ts
infra/: docker-compose.yml
infra/postgres/: init.sql
scripts/: seed-data.sh  start-dev.sh  stop-dev.sh  test-api.sh
(+20 files in other folders)
